--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -12,7 +12,7 @@ header {
 header *{
     font-family:sans-serif;
     text-decoration:none;
-    color: #959595;
+    color: #b5b5b5;
     font-size: 1em;
     font-stretch:ultra-condensed;
     font-weight: 100;
