--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -16,12 +16,17 @@ header *{
     font-size: 1em;
     font-stretch:ultra-condensed;
     font-weight: 100;
-    letter-spacing: 2px;
+    font-size: calc(1vw);
+    letter-spacing: 2
 }
+
+
+ 
 #navigationList {
     height: 100%;
     width: 60%;
 }
+
 @keyframes ONLOAD {
     from {font-size: 0;}
     40% {font-size: 0;}
@@ -38,7 +43,6 @@ header *{
     animation-duration: 0.6s;
     animation-timing-function: ease;
     z-index: 1;
-    border-radius: 20px;
 }
 
 .style-summary {
