--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 header {
     background: #000000a4; 
     height: 50px;
@@ -11,6 +15,7 @@ header {
     font-stretch:ultra-condensed;
     font-weight: 100;
     font-family:sans-serif;
+    z-index: 100;
 }
 
 header *{
@@ -97,92 +102,14 @@ header a:hover,summary:hover ,#toursList a:hover{
 /*-------------налаштування фоток*/
 
 .ph-home {
-    width: 10%;
+    height: 50%;
+    margin-right: 5px;
 }
 
 .ph-galc {
-    width: 12%;
+   height: 40%;
     border-radius: 0;
     border: 0 solid black;
     margin-right: 5%;
 }
 
-.centring {
-    /*центрування*/
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-
-@keyframes showBoxRegistr {
-    from {
-        background-color: rgba(44, 44, 44, 0);
-    }
-    to {
-        background-color: rgba(37, 37, 37, 0.774);
-    }
-}
-
-.showBoxRegistr{
-    animation-name: showBoxRegistr;
-    animation-duration: 0.4s;
-    animation-timing-function: ease;
-    animation-fill-mode: forwards;
-}
-
-#loginBloc *,#reistrationBloc * { 
-    border-radius: 5px;
-     
-}
-#loginBloc,#reistrationBloc { 
-    position: absolute;
-    top:50vw;
-    z-index: 2;
-    transform:scale(2,1.4);
-    width: 100vw;
-    height: 100vh;
-     
-}
-#registrationtext{
-    font-size: 8px;
-color: blue;
-}
-#registrationtext:hover{
-color: rgb(174, 0, 255);
-}
-#exitButton{
-   text-align: center;
-   margin-left: 89%;
-   
-    height: 100%;
-     aspect-ratio: 1 / 1;
-     border-radius: 50%;
-}
-#loginBloc>div *:not(p, form),#reistrationBloc>div *:not(p, form) {
-
- border: 1px solid black;
-
-}
-.setsize{
-  width: 100%; 
-  height: 22%;
-  margin-top: 2%;
-  margin-bottom: 2%;
-}
-#authorizationButton{
-    display: block;
-    width:auto;   
-}
-#exitButton:hover, #authorizationButton:hover{
-background-color: rgb(117, 117, 117);
-}
-.visibilityhidden {
-    /*зховати елемент*/
-    visibility:hidden;
-}
-
-.overflowhidden {
-    /*хабороняє прокрутку*/
-    overflow: hidden;
-}
